--- a/_config.yml
+++ b/_config.yml
@@ -103,11 +103,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "高甜"
+  name             : "Shadow"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "where there is a will,there is a way"
   location         : "Somewhere"
-  email            :shadowsgtt@gmail.com
+  email            : "shadowsgtt@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
