--- a/_config.yml
+++ b/_config.yml
@@ -106,13 +106,13 @@ author:
   name             : "Shadow"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "where there is a will,there is a way"
-  location         : "Somewhere"
-  email            : "shadowsgtt@gmail.com"
+  location         : "Shen Zhen"
+  email            : ""
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
-    - label: "Website"
+    - label: "shadowsgtt@gmail.com"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
@@ -121,7 +121,7 @@ author:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: "GitHub"
+    - label: "https://github.com/ShadowsGtt/"
       icon: "fab fa-fw fa-github"
       # url: "https://github.com/"
     - label: "Instagram"
