--- a/_config.yml
+++ b/_config.yml
@@ -108,11 +108,11 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "where there is a will,there is a way"
   location         : "Shen Zhen"
-  email            : ""
+  email            : "shadowsgtt@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+    - label: "Gmail"
+      icon: "shadowsgtt@gmail.com"
+      url:  "shadowsgtt@gmail.com" 
     - label: "shadowsgtt@gmail.com"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
