--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,7 @@ author:
   bio              : "where there is a will,there is a way"
   location         : "Shen Zhen"
   #email            : "shadowsgtt@gmail.com"
+  QQ              : "1025814447"
   links:
     - label: "Gmail"
       icon: "shadowsgtt@gmail.com"
@@ -141,7 +142,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+       url: "https://github.com/ShadowsGtt/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
