--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "https://github.com/ShadowsGtt/"
+    #   url: "https://github.com/ShadowsGtt/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
