--- a/_config.yml
+++ b/_config.yml
@@ -109,11 +109,11 @@ author:
   avatar           : "/assets/image/gt.jpg" #个人照路径
   bio              : "where there is a will,there is a way"
   location         : "Shen Zhen"
-  #email            : "shadowsgtt@gmail.com"
+  email            : "shadowsgtt@gmail.com"
   links:
-    - label: "Gmail"
-      icon: "shadowsgtt@gmail.com"
-      url:  "shadowsgtt@gmail.com" 
+    - label: "GitHub"
+      icon: "fas fa-fw fa-link"
+      url:  "https://github.com/ShadowsGtt/" 
     - label: "shadowsgtt@gmail.com"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
