--- a/_config.yml
+++ b/_config.yml
@@ -106,20 +106,27 @@ analytics:
 # Site Author
 author:
   name             : "Shadow"
-  avatar           : "/assets/image/gt.jpg" #个人照路径
+  avatar           : "/mydata/image/gt.jpg" #个人照路径
   bio              : "where there is a will,there is a way"
   location         : "Shen Zhen"
-  #email            : "shadowsgtt@gmail.com"
+  email            : "shadowsgtt@gmail.com"
   links:
+      #GitHub
     - label: "GitHub"
       icon: "fas fa-fw fa-link"
       url:  "https://github.com/ShadowsGtt/" 
+
+      #个人网站
     - label: "shadowsgtt@gmail.com"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
+  
+      #Twitter
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/tiangao7?s=09"
+   
+      #Facebook
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
